--- a/css/style.css
+++ b/css/style.css
@@ -2686,7 +2686,7 @@ footer::after {
     padding: 4rem 2rem;
     margin: 0;
     border-top: none !important;
-    border-bottom: 3px solid #e2e8f0 !important;
+    border-bottom: none !important;
     position: relative;
     width: 100%;
     box-sizing: border-box;
