--- a/css/style.css
+++ b/css/style.css
@@ -3576,7 +3576,10 @@ footer::after {
     }
     
     .partner-logo img {
-        max-height: 60px;
+        max-height: 60px !important;
+        height: 60px !important;
+        width: auto !important;
+        object-fit: contain !important;
     }
     
     #partners.section-padding {
