amélioration 2 images header et background webp

--- a/css/style.css
+++ b/css/style.css
@@ -1756,7 +1756,7 @@ a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../public/Gemini_Generated_Image_page_accueil_ateliers_background.png');
+    background-image: url('../public/Gemini_Generated_Image_page_accueil_ateliers_background.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
